<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_meuPerfil"
        android:orderInCategory="100"
        android:title="@string/meuPerfil" />

    <item
        android:id="@+id/action_meusTopicos"
        android:orderInCategory="100"
        android:title="@string/meusTopicos" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/sair"
        app:showAsAction="never" />
</menu>